feat: enhanced dashboard with AI chat, real-time monitoring, WebSocket fix
- Fix WebSocket 401: add /ws/** to permitAll in SecurityConfig
- Add AI Chat: AiChatService (rule-based + OpenAI), AiChatController (REST + WS)
- Enhanced dashboard: advanced KPIs, performance scoring, AI recommendations
- Real-time WebSocket push for dashboard updates
- Add report status endpoint: GET /reports/request/{id}/status
- Fix agent warning on unassigned requests
- Admin service, auth controller, password reset, email service
- MinIO storage, OpenAI insights, data anonymization
- Auto-generate survey, dashboard controller, question controller
- UTF-8 encoding config in application.properties and pom.xml